--- a/index.htm
+++ b/index.htm
@@ -303,7 +303,7 @@ and received his Ph.D. degree in Pattern Recognition and Intelligent System from
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
-His research interests include stable machine learning, causal learning, and multi-modal semantic comprehension. 
+His research interests include causal learning, continual learning, and multi-modal semantic comprehension. 
 <br>
 <br>
 <font size="" color="red"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
