--- a/index.htm
+++ b/index.htm
@@ -653,7 +653,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 <p>
 <font size="3">
-<b>Machine Learning</b></font>
+<b>Machine Learning / Computer Vision</b></font>
 </p>
 
 <ul>
@@ -664,7 +664,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <li><a href="https://github.com/sudharsan13296/Awesome-Meta-Learning"  target="_blank">Meta-Learning</a>
 </li>
   
-<li><a href="https://github.com/xialeiliu/Awesome-Incremental-Learning"  target="_blank">Incremental Learning / Lifelong Learning</a>
+<li><a href="https://github.com/extreme-assistant/survey-computer-vision"  target="_blank">Survey-Computer-Vision</a>
 </li>
  
 
